modules/networking/main.tf
resource "aws_vpc" "vpc" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = var.vpc_name
    Environment = var.environment
  }

}
resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.vpc_name}-igw"
  }

}
resource "aws_subnet" "public" {

  count = 3

  vpc_id = aws_vpc.vpc.id

  cidr_block = var.public_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"
  }

}
resource "aws_subnet" "private" {

  count = 3

  vpc_id = aws_vpc.vpc.id

  cidr_block = var.private_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  tags = {

    Name = "private-subnet-${count.index + 1}"

    "kubernetes.io/role/internal-elb" = "1"

  }

}
resource "aws_eip" "eip" {

  count = 3

  domain = "vpc"

  tags = {
    Name = "nat-eip-${count.index + 1}"
  }

}

resource "aws_nat_gateway" "nat" {

  count = 3

  allocation_id = aws_eip.eip[count.index].id

  subnet_id = aws_subnet.public[count.index].id

  depends_on = [
    aws_internet_gateway.igw
  ]

  tags = {

    Name = "nat-gateway-${count.index + 1}"

  }

}
resource "aws_route_table" "public" {

  vpc_id = aws_vpc.vpc.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {

    Name = "public-route-table"

  }

}
resource "aws_route_table" "private" {

  count = 3

  vpc_id = aws_vpc.vpc.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.nat[count.index].id

  }

  tags = {

    Name = "private-route-table-${count.index + 1}"

  }

}
resource "aws_route_table_association" "public" {

  count = 3

  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id

}
resource "aws_route_table_association" "private" {

  count = 3

  subnet_id = aws_subnet.private[count.index].id

  route_table_id = aws_route_table.private[count.index].id

}
